Try to use push

--- a/home_price.Rmd
+++ b/home_price.Rmd
@@ -7,6 +7,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+Just trying to see pushing
+
 #### Add Libraries
 ```{r}
 library(data.table)
