--- a/final_team_review_2_23.Rmd
+++ b/final_team_review_2_23.Rmd
@@ -8,7 +8,6 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-#### Add Libraries
 ```{r, include=FALSE, echo=FALSE}
 library(data.table)
 library(ggplot2)
@@ -35,21 +34,18 @@ theme_set(theme_classic())
 
 
 # Executive Summary
--- summarizing our dataset and the problem
--- discussing the different methods we used 
--- don't need to mention the specific MSE's and RMSE's, just say which performed the best and worst
--- tie into the story - this method can be used to predict apartment prices in South Korea
+As a team, we set out to develop a model to predict apartments prices in South Korea based on various features about the location and attributes of the particular apartment. Housing prices is an area of big concern all over the world given our ever growing population. South Korea, a country in which about 59.9% of all homes are apartments, is no exception. We will specifically be examining apartments in order to understand which factors contribute most to apartments prices, and to predict prices for apartments that we have not yet seen. For a family searching for a home in South Korea, this model can help them to understand if they are overpaying. For example, if they know the location of the apartment and some basic information, such as the number of rooms, they can determine if they are being offered a fair price. In addition, the landlord or seller of the property can use this model to calculate a fair price for the apartment.
 
-As a team, we set out to develop a model to predict apartments prices in South Korea based on various features about the location and attributes of the particular apartment. Housing prices is an area of big concern all over the world given our ever growing population. South Korea, a country in which about 59.9% of all homes are apartments, is no exception. We will specifically be examining apartments in order to understand which factors contribute most to apartments prices, and to predict prices for apartments that we have not yet seen. For a family searching for a home in South Korea, this model can help them to udnerstand if they are overpaying. For example, if they know the location of the apartment and some basic information, such as the number of rooms, they can determine if they are being offered a fair price.
 
 Our Dataset contains the following features:
+
 * transaction_real_price: the price that the apartment was sold at (target variable)
 * key: increments by one based on the row number
 * apartment_id: a unique identifier for the building in which the apartment is found
 * transaction_year_month: the year and month the transaction took place
 * transaction_date: the date on which the transaction took place
 * year_of_completion: the year the apartment was built
-* exclusive_use_area: 
+* exclusive_use_area: the total floor area of the building
 * floor: the floor number that the apartment building is located
 * latitude: latitude of the apartment
 * longitude: longitude of the apartment
@@ -62,10 +58,10 @@ Our Dataset contains the following features:
 * heat_type: the type of heat available tot he apartment (individual, central, district)
 * heat_fuel: the type of heating fuel used by the apartment (gas, cogeneration)
 * room_id: unique identifier for the apartment
-* supply_area:
-* total_housefol_count_of_area_type
+* supply_area: Total site area (area of the entire apartment complex)
+* total_household_count_of_area_type: Count of households in the immediate area
 * room_count: the number of rooms in the apartment
-* bathroom_count: the number of bathroms in the apartment
+* bathroom_count: the number of bathrooms in the apartment
 * front_door_structure: the structure of the entrance to the apartment (corridor, stairway, mixed)
 
 
@@ -147,12 +143,12 @@ Price[, .N]
 ##### Create dummy variables for use in later ML steps
 We will convert transaction_date, heat_type, heat_fuel, and front_door_structure
 ```{r}
-Price <- Price[transaction_date == "1~10", transaction_date:=0]
-Price <- Price[transaction_date == "11~20", transaction_date:=1]
-Price <- Price[transaction_date == "21~30", transaction_date:=2]
-Price <- Price[transaction_date == "21~28", transaction_date:=2]
-Price <- Price[transaction_date == "21~29", transaction_date:=2]
-Price <- Price[transaction_date == "21~31", transaction_date:=2]
+Price <- Price[transaction_date == "1~10", transaction_date:=1]
+Price <- Price[transaction_date == "11~20", transaction_date:=2]
+Price <- Price[transaction_date == "21~30", transaction_date:=3]
+Price <- Price[transaction_date == "21~28", transaction_date:=3]
+Price <- Price[transaction_date == "21~29", transaction_date:=3]
+Price <- Price[transaction_date == "21~31", transaction_date:=3]
 Price[,transaction_date := as.numeric(transaction_date)]
 Price <- Price[heat_type == "individual", heat_type:=0]
 Price <- Price[heat_type == "central", heat_type:=1]
@@ -163,10 +159,19 @@ Price <- Price[heat_fuel == "cogeneration", heat_fuel:=1]
 Price[,heat_fuel := as.numeric(heat_fuel)]
 Price <- Price[front_door_structure == "corridor", front_door_structure:=0]
 Price <- Price[front_door_structure == "stairway", front_door_structure:=1]
-Price <- Price[front_door_structure == "mixed", front_door_structure:=2]
+Price <- Price[front_door_structure == "mixed", front_door_structure:=1]
 Price[,front_door_structure := as.numeric(front_door_structure)]
 Price[,transaction_real_price := as.numeric(transaction_real_price)] 
 Price[,address_by_law := as.numeric(address_by_law)]
+
+Price[, transaction_real_price := as.numeric(transaction_real_price)]
+```
+
+Below, we will remove apartment_id, room_id, and key since these are not useful in prediction
+```{r}
+Price[,key := NULL]
+Price[,apartment_id := NULL]
+Price[,room_id := NULL]
 ```
 
 # EDA
@@ -269,29 +274,28 @@ In this section, we used a number of machine learning techniques to predict the 
 * Random Forest
 * Boosting
  
+## Setup test and train datasets
+```{r}
+# Set the seed to get consistent results
+set.seed(810)
 
+rows <- sample(nrow(Price), 160000)
+Price <- Price[rows,]
 
+# Split the data
+# This way we can do an 80/20 split
+row_index <- sample(nrow(Price), 128000)
 
+# we use that set of random numbers to select those random rows
+dd_train <- Price[row_index,]
+dd_test <- Price[-row_index,]
+```
 
 
 ## Linear Regression
 We started by trying linear regression model. We used an 80/20 split between our test and train datasets, and used all of the features to predict price. 
 For this model, we calculated a Train RMSE score of 181,463,147.957 Korean Won. We calculated a Test RMSE score of 181,924,683.947 Korean Won.
 ```{r}
-Price[, transaction_real_price := as.numeric(transaction_real_price)]
-
-# we want to select random columns and set the seed to get consistent results
-set.seed(810)
-
-# Split the data
-# test index is a random set of 320000 numbers
-# this way we can do an 80/20 split
-test_index <- sample(nrow(Price), 320000)
-
-# we use that set of random numbers to select those random rows
-dd_test <- Price[test_index,]
-dd_train <- Price[-test_index,]
-
 # our response variables to use later
 y_train <- dd_train$transaction_real_price
 y_test <- dd_test$transaction_real_price
@@ -319,12 +323,14 @@ In this model, our lowest RMSE was 181,000,000 Korean Won with all 24 variables.
 train.control <- trainControl(method = "cv", number = 10)
 
 # Train the model
-step.model <- train(transaction_real_price ~., data = dd_train,
-                    method = "leapForward", 
-                    tuneGrid = data.frame(nvmax = 1:24),
-                    trControl = train.control
-                    )
-step.model$results
+
+### NOT WORKING ###
+#step.model <- train(transaction_real_price ~., data = dd_train,
+             #       method = "leapForward", 
+            #        tuneGrid = data.frame(nvmax = 1:24),
+            #        trControl = train.control
+            #        )
+#step.model$results
 ```
 
 
@@ -345,7 +351,7 @@ step.model$results
 We created a new formula that includes all 24 predictors, and split out test and train datasets
 ```{r}
 # added all of the variables to the formula so that we can have 24 predictors
-f2 <- as.formula(transaction_real_price ~ apartment_id + city + transaction_year_month + transaction_date + year_of_completion + exclusive_use_area + floor + longitude + latitude + address_by_law + total_parking_capacity_in_site + total_household_count_in_sites + apartment_building_count_in_sites + tallest_building_in_sites + lowest_building_in_sites + heat_type + heat_fuel + room_id + supply_area + total_household_count_of_area_type + room_count + bathroom_count + front_door_structure)
+f2 <- as.formula(transaction_real_price ~  city + transaction_year_month + transaction_date + year_of_completion + exclusive_use_area + floor + longitude + latitude + address_by_law + total_parking_capacity_in_site + total_household_count_in_sites + apartment_building_count_in_sites + tallest_building_in_sites + lowest_building_in_sites + heat_type + heat_fuel + supply_area + total_household_count_of_area_type + room_count + bathroom_count + front_door_structure)
 
 x1_train_sample <- model.matrix(f2, dd_train)[,-1]
 x1_test <- model.matrix(f2, dd_test)[,-1]
@@ -415,19 +421,14 @@ mse.test.lasso <- mean((y_test - yhat.test.lasso)^2)
 cat("Train RMSE: ",sqrt(mse.train.lasso))
 cat(" Test RMSE: ",sqrt(mse.test.lasso))
 
-extract.coef(fit.lasso)
+# extract.coef(fit.lasso)
 ```
 
 
 ## Decision Tree
-In our decision tree model, 
+In our decision tree model, we use row_index to get the same observations used in the previous models.
 ```{r}
-set.seed(217)
-train = sample(1:nrow(Price),nrow(Price)*3/4)
-
-tree.testy = Price[-train,transaction_real_price]
-tree.test = Price[-train]
-tree.price = tree(transaction_real_price ~ .,Price,subset = train)
+tree.price = tree(transaction_real_price ~ . , Price, subset = row_index)
 
 summary(tree.price)
 ```
@@ -443,15 +444,15 @@ cv.price
 Our RMSE below is 189,891,653.318 Korean Won.
 ```{r}
 #Test MSE
-tree.yhat = predict(tree.price,newdata=tree.test)
-mean((tree.yhat - tree.testy)^2) 
+tree.yhat = predict(tree.price,newdata=dd_test)
+mean((tree.yhat - y_test)^2) 
 ``` 
 
 
 ```{r}
 #Lecture Method to deal with decision tree
 set.seed(217)
-tree.price.lec <- rpart(transaction_real_price ~ ., Price,subset = train,
+tree.price.lec <- rpart(transaction_real_price ~ ., Price,subset = row_index,
                     control = rpart.control(cp=0.01))
 rpart.plot(tree.price.lec,type = 1)
 ```
@@ -483,15 +484,10 @@ rpart.plot(tree.price.lec,type = 1)
 #### Bagging using 5000 rows as training 
 We decided to use 5000 rows for compute resource reasons. We then used the remaining data to calculate the test MSE. We found that there was a significant improvement in the RMSE, which we calculate to be 101,033,509.293 Korean Won. Also, we found that when we increased the number of observations in the train dataset, our MSE went down significantly. 
 ```{r}
-set.seed(217)
 
-train = sample(1:nrow(Price),5000)
-tree.testy = Price[-train,transaction_real_price]
-tree.test = Price[-train]
-
-rf.price = randomForest(transaction_real_price ~ ., data = Price, subset = train, mtry=24, importance = TRUE)
-yhat.rf = predict(rf.price, newdata = tree.test)
-mean((tree.testy-yhat.rf)^2)
+rf.price = randomForest(transaction_real_price ~ ., data = Price, subset = row_index, mtry=24, importance = TRUE)
+yhat.rf = predict(rf.price, newdata = dd_test)
+mean((y_test-yhat.rf)^2)
 
 ```
 
@@ -500,15 +496,11 @@ mean((tree.testy-yhat.rf)^2)
 ## Random Forest
 This process is similar to bagging; we took a sample of 5000 observations from the dataset. We then ran the random forest model on out sample, and computed an MSE. The MSE was again an improvement over some of the less flexible models earlier in the report. We calculated a test MSE of 102,026,222.12 Korean Won. Due to the fact that we are only able to take a sample of 5000 observations, the model has higher variability since the MSE can change significantly every time we run the model.
 ```{r}
-set.seed(217)
-train = sample(1:nrow(Price),5000)
-tree.testy = Price[-train,transaction_real_price]
-tree.test = Price[-train]
 
-rf.price = randomForest(transaction_real_price ~ ., data = Price, subset = train, mtry = 5, importance = TRUE)
+rf.price = randomForest(transaction_real_price ~ ., data = Price, subset = row_index, mtry = 5, importance = TRUE)
 
-yhat.rf = predict(rf.price, newdata = tree.test)
-mean((tree.testy-yhat.rf)^2)
+yhat.rf = predict(rf.price, newdata = dd_test)
+mean((y_test-yhat.rf)^2)
 ```
 
 
@@ -523,18 +515,143 @@ varImpPlot(rf.price)
 #### Boosting
 the boosting process reveals similar finding to what we saw with random forest above. Again, we can see that supply area, and exclusive use area are both relatively more important compared to the other predictors.
 ```{r}
-set.seed(217)
-
-train_sample = sample(1:nrow(Price),5000)
-tree.testy_sample = Price[-train_sample,transaction_real_price]
-
-boost.price = gbm(transaction_real_price ~ ., data = Price[train_sample,], distribution = "gaussian", n.trees = 5000, interaction.depth = 4 )
+boost.price = gbm(transaction_real_price ~ ., data =row_index, distribution = "gaussian", n.trees = 5000, interaction.depth = 4 )
 summary(boost.price)
 
 ```
 The results of the boosting model reveal an RMSE of 81,283,479.2562 Korean Won. This model produced the lowest error of any of the models in the report.
 ```{r}
 #Evaluate boosted tree model
-yhat.boost = predict(boost.price, newdata = Price[-train_sample,], n.trees = 5000)
-mean((tree.testy_sample - yhat.boost)^2)
+yhat.boost = predict(boost.price, newdata =dd_test, n.trees = 5000)
+mean((y_test - yhat.boost)^2)
 ```
+
+
+
+
+
+
+
+# Boosting
+#### Feature Engineering
+```{r}
+dd_train_engineering <- copy(dd_train)
+dd_test_engineering <- copy(dd_test)
+
+# feature engineering for train
+# perform feature engineering to put the latitude and longitude in 3d space
+dd_train_engineering[, x := cos(latitude) * cos(longitude)]
+dd_train_engineering[, y := cos(latitude) * sin(longitude)]
+dd_train_engineering[, z := sin(latitude)]
+
+dd_train_engineering[, living_area := supply_area - exclusive_use_area]
+dd_train_engineering[, bathroom_per_living_area := bathroom_count/living_area]
+dd_train_engineering[, area_ratio := exclusive_use_area / supply_area]
+dd_train_engineering[, household_ratio := total_household_count_of_area_type / total_household_count_in_sites]
+dd_train_engineering[, total_household_per_building_count := total_household_count_in_sites / apartment_building_count_in_sites]
+dd_train_engineering[, age_of_apartment := 2021 - year_of_completion]
+
+dd_train_engineering[, year := as.numeric(substr(transaction_year_month, 1,4))]
+dd_train_engineering[, month := as.numeric(substr(transaction_year_month, 5,6))]
+
+# feature engineering for test
+dd_test_engineering[, x := cos(latitude) * cos(longitude)]
+dd_test_engineering[, y := cos(latitude) * sin(longitude)]
+dd_test_engineering[, z := sin(latitude)]
+
+dd_test_engineering[, living_area := supply_area - exclusive_use_area]
+dd_test_engineering[, bathroom_per_living_area := bathroom_count/living_area]
+dd_test_engineering[, area_ratio := exclusive_use_area / supply_area]
+dd_test_engineering[, household_ratio := total_household_count_of_area_type / total_household_count_in_sites]
+dd_test_engineering[, total_household_per_building_count := total_household_count_in_sites / apartment_building_count_in_sites]
+dd_test_engineering[, age_of_apartment := 2021 - year_of_completion]
+
+dd_test_engineering[, year := as.numeric(substr(transaction_year_month, 1,4))]
+dd_test_engineering[, month := as.numeric(substr(transaction_year_month, 5,6))]
+
+```
+
+
+#### Boosting: cross validation without feature engineering
+```{r}
+# select a random sample of 10000 observations
+train_sample_index = sample(1:nrow(dd_train),nrow(dd_train)*4/5)
+train_sample = dd_train[train_sample_index,]
+tree.testy_sample = dd_test[-(sample(nrow(train_sample))), transaction_real_price]
+
+boost.price.cv <- gbm(transaction_real_price ~ ., data = train_sample, distribution = "gaussian", n.trees = 5000, interaction.depth = 4, cv.folds=10)
+
+# predict on the test dataset using the recommended number of trees
+predictions <- predict(boost.price.cv, newdata=dd_test, n.trees=which.min(boost.price.cv$cv.error))
+
+boost_RMSE <- sqrt(mean((dd_test$transaction_real_price - predictions)**2))
+paste("Boost RMSE",boost_RMSE)
+```
+The most significant features according to the model.
+```{r}
+summary(boost.price.cv)
+```
+
+
+
+#### Boosting: cross validation with feature engineering
+
+```{r}
+# move the target variable to be the first feature
+#setcolorder(price_engineering, c("transaction_real_price", setdiff(names(price_engineering), "transaction_real_price")))
+
+# select a random sample of 10000 observations
+train_sample_index = sample(1:nrow(dd_train_engineering),nrow(dd_train_engineering)*4/5)
+train_sample = dd_train_engineering[train_sample_index,]
+tree.testy_sample = dd_test_engineering[-train_sample_index, transaction_real_price]
+
+boost.price.cv <- gbm(transaction_real_price ~ ., data = train_sample, distribution = "gaussian", n.trees = 5000, interaction.depth = 4, cv.folds=10)
+
+# predict on the test dataset using the recommended number of trees
+predictions <- predict(boost.price.cv, newdata=dd_test_engineering, n.trees=which.min(boost.price.cv$cv.error))
+
+boost_RMSE <- sqrt(mean((dd_test_engineering$transaction_real_price - predictions)**2))
+paste("Boost RMSE",boost_RMSE)
+```
+The most significant features according to the model.
+```{r}
+summary(boost.price.cv)
+```
+
+
+
+
+
+
+```{r}
+train_sample = sample(1:nrow(price_engineering),10000)
+tree.testy_sample = price_engineering[-train_sample,transaction_real_price]
+
+boost.price = gbm(transaction_real_price ~ ., data = price_engineering[train_sample,], distribution = "gaussian", n.trees = 20000, interaction.depth = 4 )
+summary(boost.price)
+
+```
+
+
+```{r}
+
+
+
+#Evaluate boosted tree model
+yhat.boost = predict(boost.price, newdata = price_engineering[-train_sample,], n.trees = 20000)
+#mean((tree.testy_sample - yhat.boost)*(tree.testy_sample - yhat.boost))
+
+boost_RMSE <- sqrt(mean((tree.testy_sample - yhat.boost)**2))
+paste("Boost RMSE",boost_RMSE)
+```
+
+
+
+
+
+
+
+
+
+
+
